fix sidebar overlay on mobile (blogspot)

--- a/blogspot/blog.css
+++ b/blogspot/blog.css
@@ -73,7 +73,7 @@
 	bottom: 0;
 	top: 0;
 	left: 0;
-	z-index: 8;
+	z-index: 9;
 }
 
 #Label1 > div,
